--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <input type="checkbox">浮层
         </div>
     </div>
+    <script src="./jquery-3.2.1.min.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
